# nospace

./: .gitattributes  .gitignore  .gitmessage  CLAUDE.md
development/harkly/cx-platform/: .env.example  Cargo.toml  TECHNICAL_SPECIFICATION.md  _g3_analytics.md  _g3_demo.md  _g3_fix.md  _g3_jwt_auth.md  _g3_sources_tier1.md  _g3_stage2.md  _g3_stage2b.md  _g3_stage3.md  _g3_stage4a.md  _g3_stage4b.md  _g3_task.md
development/harkly/cx-platform/.g3/sessions/: review-turn-1.md
development/harkly/cx-platform/g3-plan/: current_requirements.md  planner_history.txt  todo.g3.md
development/harkly/cx-platform/migrations/: 20260305000100_001_tenants.sql  20260305000200_002_researches.sql  20260305000300_003_signals.sql  20260305000400_004_users.sql
development/harkly/cx-platform/src/: config.rs  main.rs
development/harkly/cx-platform/src/api/: auth.rs  mod.rs  rate_limit.rs  tenant.rs
development/harkly/cx-platform/src/api/routes/: mod.rs  researches.rs
development/harkly/cx-platform/src/db/: mod.rs  pool.rs
development/harkly/cx-platform/src/domain/: mod.rs  research.rs  signal.rs  tenant.rs
development/harkly/cx-platform/src/etl/: mod.rs  normalize.rs  sentiment.rs  store.rs  validate.rs
development/harkly/cx-platform/src/sources/: gog.rs  mod.rs  reddit.rs  steam.rs
finance/nomos/api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
finance/nomos/api/src/nomos_api/: __init__.py  alerts.py  auth.py  config.py  deps.py  journal.py  journal_watcher.py  live_prices.py  main.py  portfolio.py  risk.py  runner_control.py  sse.py  strategies.py
finance/nomos/api/src/nomos_api/models/: __init__.py  balance.py  journal.py  risk.py  runner.py  strategy.py  trade.py
finance/nomos/api/src/nomos_api/routes/: balance.py  charts.py  health.py  live.py  rag.py  risk.py  runner.py  strategies.py  (+1 more)
(+1686 files in other folders)
